--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LAYI-CONTACT - Snapchat Business Directory</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="./assets/index.js"></script>
+<link rel="stylesheet" href="./assets/index.css">
     <style>
         body {
             font-family: 'Inter', sans-serif;
