--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LAYI-CONTACT - Snapchat Business Directory</title>
+    <title>LAYI - Expert SNAPCHAT & IA</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
             background-color: #000000;
             color: #ffffff;
+            overflow-x: hidden;
         }
         .orange-gradient {
             background: linear-gradient(135deg, #FFB000 0%, #FFD700 100%);
@@ -29,6 +30,61 @@
             -ms-overflow-style: none;
             scrollbar-width: none;
         }
+
+        @keyframes shimmer {
+          0% { transform: translateX(-100%); }
+          100% { transform: translateX(200%); }
+        }
+
+        .animate-shimmer {
+          animation: shimmer 2s infinite linear;
+        }
+
+        @keyframes gold-pulse {
+          0%, 100% { border-color: rgba(255, 240, 0, 0.8); box-shadow: 0 0 15px rgba(255, 240, 0, 0.3); }
+          50% { border-color: rgba(255, 255, 255, 1); box-shadow: 0 0 30px rgba(255, 240, 0, 0.6); }
+        }
+        .animate-gold-border {
+          animation: gold-pulse 3s infinite ease-in-out;
+          border-width: 3px;
+        }
+
+        /* Nouvelles animations pour le titre Hero */
+        @keyframes text-gradient-flow {
+          0% { background-position: 0% 50%; }
+          50% { background-position: 100% 50%; }
+          100% { background-position: 0% 50%; }
+        }
+        .text-flow {
+          background: linear-gradient(to right, #ffffff, #FFB000, #ffffff);
+          background-size: 200% auto;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          animation: text-gradient-flow 3s linear infinite;
+        }
+
+        @keyframes float-gentle {
+          0%, 100% { transform: translateY(0); }
+          50% { transform: translateY(-5px); }
+        }
+        .animate-float {
+          animation: float-gentle 4s ease-in-out infinite;
+        }
+
+        /* Animation de lueur pour le bouton */
+        @keyframes neon-pulse {
+          0%, 100% { 
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.2), 0 0 20px rgba(0, 0, 0, 0.5);
+            transform: scale(1);
+          }
+          50% { 
+            box-shadow: 0 0 25px rgba(255, 255, 255, 0.5), 0 0 40px rgba(255, 176, 0, 0.3);
+            transform: scale(1.02);
+          }
+        }
+        .button-glow {
+          animation: neon-pulse 2s infinite ease-in-out;
+        }
     </style>
 <script type="importmap">
 {
@@ -41,8 +97,10 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="root"></div>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
