--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 }
 </script>
 <link rel="stylesheet" href="/index.css">
+<link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <div id="root"></div>
